# snk

./: .gitignore  CMakeLists.txt  build.sh  main.c  meson.build  meson_options.txt  run.sh  snk.c  snk.h  snk_client.c  snk_defs.h  snk_joint.c  snk_joint.h  snk_position.c  snk_position.h  snk_server.c  snk_snake.c  snk_snake.h  snk_util.h  tcp_app.c  tcp_app.h  tcp_util.c  tcp_util.h
app/: meson.build
app/terminal_snk/: main.c  meson.build  terminal.h  terminal_common.c  terminal_ncurses.c  terminal_win.c
lib/: meson.build
lib/snk/: meson.build  snk.c  snk.h  snk_defs.h  snk_joint.c  snk_joint.h  snk_position.c  snk_snake.c  snk_snake.h  snk_util.c  snk_util.h
lib/snk_config/: config_example.json  meson.build  snk_config.c  snk_config.h  snk_factory.c  snk_factory.h
