project('snk', 'c')
extra_args = [
    '-ggdb3',
    '-Werror',
    '-O',
    '-Wall',
    '-Wextra',
#    '-pedantic',
#    '-pedantic-errors',
    '-ansi',
    '-Wcast-align',
    '-Wcast-qual',
    '-Wdisabled-optimization',
    '-Wformat=2',
    '-Winit-self',
    '-Wlogical-op',
    '-Wmissing-include-dirs',
    '-Wredundant-decls',
    '-Wshadow',
    '-Wstrict-overflow=5',
    '-Wundef',
    '-Wunused',
    '-Wno-variadic-macros',
    '-fdiagnostics-show-option',
    '-Wmaybe-uninitialized',
    '-Wuninitialized',
]
executable(
    'snk',
    'main.c',
    'snk.c',
    'snk_joint.c',
    c_args : extra_args,
    dependencies: [],
)
